--- a/eBook/04.5.md
+++ b/eBook/04.5.md
@@ -404,7 +404,7 @@ func main() {
 		fmt.Printf("%d / ", r)
 	}
 	fmt.Println()
-	timens := int64(time.Now().Nanosecond())
+	timens := time.Now().Unix()
 	rand.Seed(timens)
 	for i := 0; i < 10; i++ {
 		fmt.Printf("%2.2f / ", 100*rand.Float32())
