--- a/eBook/04.8.md
+++ b/eBook/04.8.md
@@ -18,6 +18,57 @@ fmt.Println(t.Format("02 Jan 2006 15:04"))
 
 	21 Jul 2011 10:31
 
+
+go关于日期格式的定义采用固定的格式，猜测根据固定的字符串匹配响应的日期格式，简单来说`jan`、`01`、`1`都表示的是月份，所以可以通过此方式确定月份的格式信息。
+
+
+```go
+package main
+
+import (
+	"fmt"
+	"time"
+)
+
+func main() {
+	now := time.Now()
+	nowStr := now.Format("01/02 03:04:05PM '06 -0700")
+	fmt.Println(nowStr)
+	nowStr = now.Format("2006-January-02 03:04:05.999 pm")
+	fmt.Println(nowStr)
+	nowStr = now.Format("2006-Jan-02 03:04:05.999 pm")
+	fmt.Println(nowStr)
+	nowStr = now.Format("06-Jan-02 03:04:05.999 pm")
+	fmt.Println(nowStr)
+	nowStr = now.Format("006-Jan-02 03:04:05.999 pm")
+	fmt.Println(nowStr)
+	nowStr = now.Format("006-Jan-02 03:04:05.999 pm MST")
+	fmt.Println(nowStr)
+	nowStr = now.Format("006-Jan-02 03:04:05.999 pm -07")
+	fmt.Println(nowStr)
+	nowStr = now.Format("006-Jan-02 03:04:05.999 pm -070")
+	fmt.Println(nowStr)
+	nowStr = now.Format("006-Jan-02 03:04:05.999 pm mst")
+	fmt.Println(nowStr)
+	nowStr = now.Format("006-Jan-02 03:04:05.999 pm -07:00")
+	fmt.Println(nowStr)
+}
+```
+
+输出:
+
+	11/09 06:31:40PM '21 +0800
+	2021-November-09 06:31:40.094 pm
+	2021-Nov-09 06:31:40.094 pm
+	21-Nov-09 06:31:40.094 pm
+	021-Nov-09 06:31:40.094 pm
+	021-Nov-09 06:31:40.094 pm CST
+	021-Nov-09 06:31:40.094 pm +08
+	021-Nov-09 06:31:40.094 pm +080
+	021-Nov-09 06:31:40.094 pm mst
+	021-Nov-09 06:31:40.094 pm +08:00
+
+
 其它有关时间操作的文档请参阅 [官方文档](http://golang.org/pkg/time/)（ **译者注：国内用户可访问 [该页面](http://docs.studygolang.com/pkg/time/)** ）。
 
 示例 4.20 [time.go](examples/chapter_4/time.go)
