--- a/eBook/05.4.md
+++ b/eBook/05.4.md
@@ -124,7 +124,7 @@ func main() {
 
 如果我们打印 str 和 str2 的长度，会分别得到 27 和 9。
 
-由此我们可以发现，ASCII 编码的字符占用 1 个字节，既每个索引都指向不同的字符，而非 ASCII 编码的字符（占有 2 到 4 个字节）不能单纯地使用索引来判断是否为同一个字符。我们会在第 5.4.4 节解决这个问题。
+由此我们可以发现，ASCII 编码的字符占用 1 个字节，既每个索引都指向不同的字符，而非 ASCII 编码的字符（占有 2 到 4 个字节）**不能单纯地使用索引来判断是否为同一个字符**。我们会在第 5.4.4 节解决这个问题。
 
 ### 练习题
 
@@ -222,6 +222,8 @@ for pos, char := range str {
 ```
 
 每个 rune 字符和索引在 for-range 循环中是一一对应的。它能够自动根据 UTF-8 规则识别 Unicode 编码的字符。
+
+注：`for-range`可以根据字符串编码格式自动适配，但是`for-i`形式的遍历就不能实现根据编码格式自动适配
 
 示例 5.9 [range_string.go](examples/chapter_5/range_string.go)：
 
