--- a/eBook/05.6.md
+++ b/eBook/05.6.md
@@ -47,6 +47,10 @@ func main() {
 }
 ```
 
+上述例子中，`continue`和`goto`的本质区别在于:
+* `continue`会继承第一层的变量值
+* `goto`则不会继承变量值
+
 上面的代码会输出 `01234`。
 
 使用逆向的 goto 会很快导致意大利面条式的代码，所以不应当使用而选择更好的替代方案。
