--- a/eBook/06.4.md
+++ b/eBook/06.4.md
@@ -244,6 +244,286 @@ func main() {
 
 	Output: 2011/10/04 10:46:11 func1("Go") = 7, EOF
 
+
+## defer的执行顺序
+
+多个defer出现的时候，它是一个栈的关系，也就是先进后出。
+
+```go
+package main
+
+import "fmt"
+
+func main() {
+    defer func1()
+    defer func2()
+    defer func3()
+}
+
+func func1() {
+    fmt.Println("A")
+}
+
+func func2() {
+    fmt.Println("B")
+}
+
+func func3() {
+    fmt.Println("C")
+}
+```
+
+输出结果:
+
+	C
+	B
+	A
+
+## defer与return谁先谁后
+defer在return之后。
+
+```go
+package main
+
+import "fmt"
+
+func deferFunc() int {
+    fmt.Println("defer func called")
+    return 0
+}
+
+func returnFunc() int {
+    fmt.Println("return func called")
+    return 0
+}
+
+func returnAndDefer() int {
+
+    defer deferFunc()
+
+    return returnFunc()
+}
+
+func main() {
+    returnAndDefer()
+}
+```
+
+输出结果:
+
+	return func called
+	defer func called
+
+**函数的返回值初始化**
+函数返回值初始化为0
+```go
+package main
+
+import "fmt"
+
+func DeferFunc(i int) (t int) {
+
+    fmt.Println("t = ", t)
+
+    return 2
+}
+
+func main() {
+    DeferFunc(10)
+}
+```
+
+输出结果:
+
+	t = 0
+
+## 有名函数返回值遇见defer情况
+先return，再defer，所以在执行完return之后，还要再执行defer里的语句，依然可以修改本应该返回的结果。
+```go
+package main
+
+import "fmt"
+
+func returnButDefer() (t int) {  //t初始化0， 并且作用域为该函数全域
+
+    defer func() {
+        t = t * 10
+    }()
+
+    return 1
+}
+
+func main() {
+    fmt.Println(returnButDefer())
+}
+```
+
+输出结果:
+
+	10
+
+## defer遇见panic
+遇到panic时，遍历本协程的defer链表，并执行defer。在执行defer过程中:遇到recover则停止panic，返回recover处继续往下执行。如果没有遇到recover，遍历完本协程的defer链表后，向stderr抛出panic信息。（先执行defer，然后再执行panic）
+
+### 未捕获异常
+```go
+package main
+
+import (
+    "fmt"
+)
+
+func main() {
+    defer_call()
+
+    fmt.Println("main 正常结束")
+}
+
+func defer_call() {
+    defer func() { fmt.Println("defer: panic 之前1") }()
+    defer func() { fmt.Println("defer: panic 之前2") }()
+
+    panic("异常内容")  //触发defer出栈
+
+    defer func() { fmt.Println("defer: panic 之后，永远执行不到") }()
+}
+```
+
+输出结果:
+
+	defer: panic 之前2
+	defer: panic 之前1
+	panic: 异常内容
+	//... 异常堆栈信息
+
+
+### 捕获异常
+```go
+package main
+
+import (
+    "fmt"
+)
+
+func main() {
+    defer_call()
+
+    fmt.Println("main 正常结束")
+}
+
+func defer_call() {
+
+    defer func() {
+        fmt.Println("defer: panic 之前1, 捕获异常")
+        if err := recover(); err != nil {
+            fmt.Println(err)
+        }
+    }()
+
+    defer func() { fmt.Println("defer: panic 之前2, 不捕获") }()
+
+    panic("异常内容")  //触发defer出栈
+
+    defer func() { fmt.Println("defer: panic 之后, 永远执行不到") }()
+}
+```
+
+输出结果:
+
+	defer: panic 之前2, 不捕获
+	defer: panic 之前1, 捕获异常
+	异常内容
+	main 正常结束
+
+## defer中包含panic
+panic仅有最后一个可以被revover捕获。最后一个panic会将上述的panic覆盖
+
+```go
+package main
+
+import (
+    "fmt"
+)
+
+func main()  {
+
+    defer func() {
+       if err := recover(); err != nil{
+           fmt.Println(err)
+       }else {
+           fmt.Println("fatal")
+       }
+    }()
+
+    defer func() {
+        panic("defer panic")
+    }()
+
+    panic("panic")
+}
+```
+
+输出结果:
+
+	defer panic
+
+## defer下的函数参数包含子函数
+
+这里面有两个defer， 所以defer一共会压栈两次，先进栈1，后进栈2。 那么在压栈function1的时候，需要连同函数地址、函数形参一同进栈，那么为了得到function1的第二个参数的结果，所以就需要先执行function3将第二个参数算出，那么function3就被第一个执行。同理压栈function2，就需要执行function4算出function2第二个参数的值。然后函数结束，先出栈fuction2、再出栈function1.
+
+所以顺序如下：
+
+* defer压栈function1，压栈函数地址、形参1、形参2(调用function3) --> 打印3
+* defer压栈function2，压栈函数地址、形参1、形参2(调用function4) --> 打印4
+* defer出栈function2, 调用function2 --> 打印2
+* defer出栈function1, 调用function1--> 打印1
+
+```go
+package main
+
+import "fmt"
+
+func function(index int, value int) int {
+
+    fmt.Println(index)
+
+    return index
+}
+
+func main() {
+    defer function(1, function(3, 0))
+    defer function(2, function(4, 0))
+}
+```
+
+输出结果:
+
+	3
+	4
+	2
+	1
+
+## DeferFunc4
+
+```go
+func DeferFunc4() (t int) {
+    defer func(i int) {
+        fmt.Println(i)
+        fmt.Println(t)
+    }(t)
+    t = 1
+    return 2
+}
+```
+
+1. 初始化返回值t为零值 0
+2. 首先执行defer的第一步，赋值defer中的func入参t为0
+3. 执行defer的第二步，将defer压栈
+4. 将t赋值为1
+5. 执行return语句，将返回值t赋值为2
+6. 执行defer的第三步，出栈并执行,因为在入栈时defer执行的func的入参已经赋值了，此时它作为的是一个形式参数，所以打印为0；相对应的因为最后已经将t的值修改为2，所以再打印一个2
+
+
 ## 链接
 
 - [目录](directory.md)
