--- a/eBook/09.1.md
+++ b/eBook/09.1.md
@@ -84,6 +84,13 @@ for e := l.Front(); e != nil; e = e.Next() {
 
 使用 `container/list` 包实现一个双向链表，将 101、102 和 103 放入其中并打印出来。
 
+```go
+list := list.New()
+
+list.PushBack(e)  // 加在链表尾
+list.PushFront(e) // 加在链表头
+```
+
 **练习 9.2**
 
 通过使用 `unsafe` 包中的方法来测试你电脑上一个整型变量占用多少个字节。
