--- a/eBook/10.5.md
+++ b/eBook/10.5.md
@@ -122,6 +122,9 @@ var d D
 
 规则1：使用 `d.b` 是没问题的：它是 float32，而不是 `B` 的 `b`。如果想要内层的 `b` 可以通过 `d.B.b` 得到。
 
+> 相同命名类型一致，则会冲突，需要制定内嵌结构体
+> 相同名字类型不一致，则可以访问外层，但是访问内层要指定内嵌结构体
+
 ## 链接
 
 - [目录](directory.md)
