--- a/eBook/10.6.md
+++ b/eBook/10.6.md
@@ -139,7 +139,7 @@ func (t time.Time) first3Chars() string {
 }
 ```
 
-类型在其他的，或是非本地的包里定义，在它上面定义方法都会得到和上面同样的错误。
+**类型在其他的，或是非本地的包里定义，在它上面定义方法都会得到和上面同样的错误。**
 
 但是有一个间接的方式：可以先定义该类型（比如：int 或 float）的别名类型，然后再为别名类型定义方法。或者像下面这样将它作为匿名类型嵌入在一个新的结构体中。当然方法只在这个别名类型上有效。
 
@@ -196,7 +196,10 @@ First 3 chars: Mon
 
 鉴于性能的原因，`recv` 最常见的是一个指向 receiver_type 的指针（因为我们不想要一个实例的拷贝，如果按值调用的话就会是这样），特别是在 receiver 类型是结构体时，就更是如此了。
 
-如果想要方法改变接收者的数据，就在接收者的指针类型上定义该方法。否则，就在普通的值类型上定义方法。
+**如果想要方法改变接收者的数据，就在接收者的指针类型上定义该方法。否则，就在普通的值类型上定义方法。**
+
+> 接收者可以看作是函数的第一个参数，即这样的： `func M1(t T)` , `func M2(t *T)` 。 go不是面向对象的语言，所以用那种看起来像面向对象的语法来理解可能有偏差。
+
 
 下面的例子 `pointer_value.go` 作了说明：`change()`接受一个指向 B 的指针，并改变它内部的成员；`write()` 通过拷贝接受 B 的值并只输出 B 的内容。注意 Go 为我们做了探测工作，我们自己并没有指出是否在指针上调用方法，Go 替我们做了这些事情。b1 是值而 b2 是指针，方法都支持运行了。
 
@@ -295,6 +298,7 @@ func main() {
 考虑 `person2.go` 中的 `person` 包：类型 `Person` 被明确的导出了，但是它的字段没有被导出。例如在 `use_person2.go` 中 `p.firstName` 就是错误的。该如何在另一个程序中修改或者只是读取一个 `Person` 的名字呢？
 
 这可以通过面向对象语言一个众所周知的技术来完成：提供 getter 和 setter 方法。对于 setter 方法使用 Set 前缀，对于 getter 方法只使用成员名。
+> 私有变量，通过可导出的函数进行修改，非可导出的变量只会在当前包内可见
 
 示例 10.15 [person2.go](examples/chapter_10/person2.go)：
 
