--- a/eBook/11.3.md
+++ b/eBook/11.3.md
@@ -89,6 +89,9 @@ func (ci *Circle) Area() float32 {
 
 如果忽略 `areaIntf.(*Square)` 中的 `*` 号，会导致编译错误：`impossible type assertion: Square does not implement Shaper (Area method has pointer receiver)`。
 
+> 编译器会检测是否有实现该方法，具体要看当前是通过指针和原型定义，两者是不同的
+> 但是在调用的时候go又存在语法糖，指针和原型调用都可
+
 ## 链接
 
 - [目录](directory.md)
