--- a/eBook/11.5.md
+++ b/eBook/11.5.md
@@ -1,5 +1,12 @@
 # 11.5 测试一个值是否实现了某个接口
 
+> 使用.type可以判断多种类型
+> 1. 判断类型是否实现了该接口
+> 2. 判断该变量的类型
+> 3. 判断该接口能否由该实现调用
+
+
+
 这是 11.3 类型断言中的一个特例：假定 `v` 是一个值，然后我们想测试它是否实现了 `Stringer` 接口，可以这样做：
 
 ```go
