--- a/eBook/11.9.md
+++ b/eBook/11.9.md
@@ -67,6 +67,9 @@ func main() {
 
 示例 [emptyint_switch.go](examples/chapter_11/emptyint_switch.go) 说明了空接口在 `type-switch` 中联合 `lambda` 函数的用法：
 
+> `type-switch`不仅可以用来判断结构体类型，也能判断接口类型，同时也可以判断是否包含该方法
+
+
 ```go
 package main
 
@@ -144,6 +147,84 @@ func (p *Vector) Set(i int, e Element) {
 **练习 11.10** min_interface.go / minmain.go：
 
 仿照 11.7 中开发的 `Sorter` 接口，创建一个 `Miner` 接口并实现一些必要的操作。函数 `Min` 接受一个 `Miner` 类型变量的集合，然后计算并返回集合中最小的元素。
+
+> 获取最小值的方法，核心就在于对切片内容进行单次最小排序，其中最小的会放在切片末尾
+
+
+```go
+package main
+
+import (
+	"fmt"
+	"math/rand"
+	"time"
+)
+
+func init() {
+	rand.Seed(time.Now().Unix())
+}
+
+type Miner interface {
+	Less(i, j int) bool
+	Len() int
+	Swap(i, j int)
+	Elem(index int) interface{}
+}
+
+func Min(m Miner) interface{} {
+	for i := 0; i < m.Len()-1; i++ {
+		if m.Less(i, i+1) {
+			m.Swap(i, i+1)
+		}
+	}
+	min := m.Elem(m.Len() - 1)
+	fmt.Println(m)
+	return min
+}
+
+type IntA []int
+
+func (a IntA) Len() int {
+	return len(a)
+}
+
+func (a IntA) Less(i, j int) bool {
+	return a[i] < a[j]
+}
+
+func (a IntA) Swap(i, j int) {
+	a[i], a[j] = a[j], a[i]
+}
+
+func (a IntA) Elem(index int) interface{} {
+	return a[index]
+}
+
+func Fill() IntA {
+	t := make(IntA, 10)
+	for i := 0; i < 10; i++ {
+		t[i] = rand.Intn(10)
+	}
+	return t
+}
+
+// func (a IntA) String() string {
+// 	s := ""
+// 	for i := 0; i < a.Len(); i++ {
+// 		s = fmt.Sprintf("%d", s[i]) + " "
+// 	}
+// 	return s
+// }
+
+func main() {
+	i := Fill()
+	min := Min(i)
+	fmt.Println(i)
+	fmt.Println(min)
+}
+
+```
+
 
 ## 11.9.3 复制数据切片至空接口切片
 
