--- a/eBook/12.1.md
+++ b/eBook/12.1.md
@@ -64,6 +64,8 @@ func main() {
 
 返回的读取器对象提供一个方法 `ReadString(delim byte)`，该方法从输入中读取内容，直到碰到 `delim` 指定的字符，然后将读取到的内容连同 `delim` 字符一起放到缓冲区。
 
+> 连同delim一起放入缓冲区
+
 `ReadString` 返回读取到的字符串，如果碰到错误则返回 `nil`。如果它一直读到文件结束，则返回读取到的字符串和 `io.EOF`。如果读取过程中没有碰到 `delim` 字符，将返回错误 `err != nil`。
 
 在上面的例子中，我们会读取键盘输入，直到回车键（\n）被按下。
