--- a/eBook/12.12.md
+++ b/eBook/12.12.md
@@ -47,6 +47,10 @@ Result: [169 74 143 229 204 177 155 166 28 76 8 115 211 145 233 135 152 47 187 2
 Result: e2222bfc59850bbb00a722e764a555603bb59b2a
 ```
 
+> io:WriteString代替sha1.Write()
+> 可以避免格式转换，hasher.Write() 入参是byte类型
+> 更为形象
+
 通过调用 `sha1.New()` 创建了一个新的 `hash.Hash` 对象，用来计算 SHA1 校验值。`Hash` 类型实际上是一个接口，它实现了 `io.Writer` 接口：
 
 ```go
