--- a/eBook/12.4.md
+++ b/eBook/12.4.md
@@ -24,6 +24,8 @@ func main() {
 	fmt.Println("Good Morning", who)
 }
 ```
+> `strings.Join`会在每一个切片间增加空格
+
 
 我们在 IDE 或编辑器中直接运行这个程序输出：`Good Morning Alice`
 
@@ -126,6 +128,8 @@ if *processedFlag { // found flag -proc
 要给 flag 定义其它类型，可以使用 `flag.Int()`，`flag.Float64()`，`flag.String()`。
 
 在第 15.8 章你将找到一个具体的例子。
+
+> `flag.VisitAll()`调用可以实现对多个flag参数进行函数调用，函数传参为`*flag.Flag`
 
 ## 链接
 
