--- a/eBook/12.8.md
+++ b/eBook/12.8.md
@@ -62,7 +62,7 @@ func NewWriter(wr io.Writer) (b *Writer)
 
 适合任何形式的缓冲写入。
 
-在缓冲写入的最后千万不要忘了使用 `Flush()`，否则最后的输出不会被写入。
+**在缓冲写入的最后千万不要忘了使用 `Flush()`，否则最后的输出不会被写入。**
 
 在 15.2-15.8 章节，我们将使用 `fmt.Fprint` 函数向 `http.ResponseWriter` 写入，其同样实现了 io.Writer 接口。
 
@@ -103,6 +103,12 @@ func main() {
 	fmt.Println("Conversion done")
 }
 ```
+
+> bufio写的时候需要调用flush，从缓冲区刷写到硬盘里
+
+
+> bufio 是带有缓冲区的读写，而ioutil是不带缓冲区的读写，ioutil需要自己定义缓冲区
+> 还有一种读文件方式os.ReadFile，但是实际上ioutil底层调用的就是os.ReadFile
 
 ## 链接
 
