--- a/eBook/13.3.md
+++ b/eBook/13.3.md
@@ -4,7 +4,12 @@
 
 `recover` 只能在 defer 修饰的函数（参见 [6.4 节](06.4.md)）中使用：用于取得 panic 调用中传递过来的错误值，如果是正常执行，调用 `recover` 会返回 nil，且没有其它效果。
 
-<u>总结</u>：panic 会导致栈被展开直到 defer 修饰的 recover() 被调用或者程序中止。
+> recover只能在被defer调用的函数中使用
+> 个人理解，为何recover一定要在defer里，因为panic会保证defer能够完整运行，所以recover在defer里，会保证panic会正常recover
+
+**<u>总结</u>：panic 会导致栈被展开直到 defer 修饰的 recover() 被调用或者程序中止。**
+
+> recover调用后的栈都会被丢弃
 
 下面例子中的 protect 函数调用函数参数 g 来保护调用者防止从 g 中抛出的运行时 panic，并展示 panic 中的信息：
 
