--- a/eBook/13.5.md
+++ b/eBook/13.5.md
@@ -70,6 +70,8 @@ func f1(a type1, b type2) {
 
 阅读下面的完整程序。不要执行它，写出程序的输出结果。然后编译执行并验证你的预想。
 
+> recover等所有defer出栈后才执行
+
 ```go
 // panic_defer.go
 package main
