--- a/eBook/13.6.md
+++ b/eBook/13.6.md
@@ -80,6 +80,9 @@ fmt.Printf("The process id is %v", pid)
 // in Windows: uitvoering: Error fork/exec /bin/ls: The system cannot find the path specified. starting process!
 ```
 
+> 上述没有在显示器上回显的原因，可以增加`cmd.Stdout=os.Stdout`
+> 也可以通过bytes.Buffer作为接受者，将其输出保存
+
 ## 链接
 
 - [目录](directory.md)
