--- a/eBook/15.7.md
+++ b/eBook/15.7.md
@@ -36,6 +36,8 @@ func main() {
 }
 ```
 
+> template 格式也要符合结构体的标准
+
 输出：`hello Mary!`
 
 数据结构中包含一个未导出的字段，当我们尝试把它整合到类似这样的定义字符串：
@@ -277,6 +279,55 @@ func main() {
 输出 `hello Mary!`。
 
 预定义函数也在 [15.6节](15.6.md) 中使用：`{{ printf "%s" .Body|html}}`，否则字节切片 `Body` 会作为数字序列打印出来。
+
+> `if-else`和`with-end`的区别
+```golang
+package main
+import (
+    "fmt"
+    "text/template"
+    "os"
+)
+type Person struct {
+    Count  string
+    Data   string
+}
+var     data_map =map[string]string{"one":"gfsgd", "two":"gdfgdfgs"}
+func main() {
+
+    str := `{{with .one}}{{.}}{{end}}`    //只输出键one的值
+    tp, err := template.New("tp").Parse(str)
+    if err != nil{
+        panic(err)
+    }
+    fmt.Println(tp.Execute(os.Stdout,data_map))
+}
+```
+	输出：gfsgd //这里只输出了one的值
+
+```golang
+package main
+import (
+    "fmt"
+    "text/template"
+    "os"
+)
+type Person struct {
+    Count  string
+    Data   string
+}
+var     data_map =map[string]string{"one":"gfsgd", "two":"gdfgdfgs"}
+
+func main() {
+    str := `{{if .one}}{{.}}{{end}}`   //输出整个map的值
+    tp, err := template.New("tp").Parse(str)
+    if err != nil{
+        panic(err)
+    }
+    fmt.Println(tp.Execute(os.Stdout,data_map))
+}
+```
+	输出：map[one:gfsgd two:gdfgdfgs]
 
 ## 链接
 
