--- a/eBook/15.9.md
+++ b/eBook/15.9.md
@@ -1,5 +1,11 @@
 # 15.9 用 rpc 实现远程过程调用
 
+
+> 实际上通过reflect判断当前结构体是否实现了可导出的函数
+> 因此，如果采用指针定义的函数，则原型没有拥有可导出的函数
+> 而指针则可以隐式的转换成原型
+
+
 Go 程序之间可以使用 `net/rpc` 包实现相互通信，这是另一种客户端-服务器应用场景。它提供了一种方便的途径，通过网络连接调用远程函数。当然，仅当程序运行在不同机器上时，这项技术才实用。`rpc` 包建立在 `gob` 包之上（见 [12.11节](12.11.md)），实现了自动编码/解码传输的跨网络方法调用。
 
 服务器端需要注册一个对象实例，与其类型名一起，使之成为一项可见的服务：它允许远程客户端跨越网络或其他 I/O 连接访问此对象已导出的方法。总之就是在网络上暴露类型的方法。
@@ -109,6 +115,88 @@ replyCall := <- call1.Done
 如果最后一个参数值为 `nil` ，调用完成后会创建一个新的通道。
 
 如果你有一个以 root 管理员身份运行的 Go 服务器，想要以不同的用户身份运行某部分代码，Brad Fitz 利用 `rpc` 写的 `go-runas` 包可以完成任务：[https://github.com/bradfitz/go-runas](https://github.com/bradfitz/go-runas)。我们将会在 19 章看到一个完整的项目，它是一个使用了 `rpc` 的应用程序。
+
+
+> 目前可以支持http和tcp两种方式的rpc
+> client tcp
+```golang
+package main
+
+import (
+	"fmt"
+	"net"
+	"net/rpc"
+)
+
+type ArithReq struct {
+	N, M int
+}
+
+type ArithResp struct {
+	Multi int
+	Div   int
+	Rem   int
+}
+
+func main() {
+	conn, err := net.Dial("tcp", "localhost:7353")
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+	client := rpc.NewClient(conn)
+
+	resp := &ArithResp{}
+
+	client.Call("Arith.Multi", ArithReq{N: 7, M: 4}, resp)
+
+	fmt.Println(resp.Rem, resp.Div, resp.Multi)
+}
+```
+> sever tcp
+```golang
+package main
+
+import (
+	"fmt"
+	"net"
+	"net/rpc"
+)
+
+type Arith struct {
+}
+
+type ArithReq struct {
+	N, M int
+}
+
+type ArithResp struct {
+	Multi int
+	Div   int
+	Rem   int
+}
+
+func (a *Arith) Multi(req ArithReq, res *ArithResp) error {
+	res.Multi = req.M * req.N
+	res.Div = req.N / req.M
+	res.Div = req.N % req.M
+	return nil
+}
+
+func main() {
+	ch := make(chan int)
+	server := rpc.NewServer()
+	server.Register(new(Arith))
+
+	listener, err := net.Listen("tcp", "localhost:7353")
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+	go server.Accept(listener)
+	<-ch
+}
+```
 
 ## 链接
 
