--- a/eBook/04.7.md
+++ b/eBook/04.7.md
@@ -224,6 +224,32 @@ func main() {
 
 你可以使用 `strings.TrimSpace(s)` 来剔除字符串开头和结尾的空白符号；如果你想要剔除指定字符，则可以使用 `strings.Trim(s, "cut")` 来将开头和结尾的 `cut` 去除掉。该函数的第二个参数可以包含任何字符，如果你只想剔除开头或者结尾的字符串，则可以使用 `TrimLeft` 或者 `TrimRight` 来实现。
 
+`TrimRight`和`TrimLeft`只会删除子串中所有包含的**字符**，如果需要删除指定的**字符串**可以使用`TrimSuffix`和`TrimPreffix`。
+
+```go
+package main
+
+import (
+	"fmt"
+	"strings"
+)
+
+func main() {
+	result := strings.TrimRight("Hello Gophers", " Gophers")
+
+	fmt.Println(result, len(result))
+
+	result = strings.TrimSuffix("Hello Gophers", " Gophers")
+	fmt.Println(result, len(result))
+
+}
+```
+输出:
+
+	Hell 4
+	Hello 5
+	
+
 ## 4.7.9 分割字符串
 
 `strings.Fields(s)` 将会利用 1 个或多个空白符号来作为动态长度的分隔符将字符串分割成若干小块，并返回一个 slice，如果字符串只包含空白符号，则返回一个长度为 0 的 slice。
@@ -232,9 +258,42 @@ func main() {
 
 因为这 2 个函数都会返回 slice，所以习惯使用 for-range 循环来对其进行处理（第 7.3 节）。
 
+
+`strings.SplitAfter`分割后保留分隔符。
+
+`strings.SplitAfterN`指定切割次数，同时也保留分隔符。
+
+```go
+package main
+
+import (
+	"fmt"
+	"strings"
+)
+
+const (
+	str = "I_Love_golang"
+)
+
+func main() {
+
+	for _, v := range strings.SplitAfter(str, "_") {
+		fmt.Println(v)
+	}
+}
+```
+
+输出:
+
+	I_
+	Love_
+	golang
+
+
 ## 4.7.10 拼接 slice 到字符串
 
-`Join` 用于将元素类型为 string 的 slice 使用分割符号来拼接组成一个字符串：
+`Join` 用于将元素类型为 string 的 slice 使用分割符号来拼接组成一个字符串，在已有字符串的时候用`strings.Join`需要在字符串中添加分隔符，用`Strings.Join`性能比较好：
+
 
 ```go
 strings.Join(sl []string, sep string) string
@@ -279,6 +338,12 @@ func main() {
 	sl2 joined by ;: GO1;The ABC of Go;25
 
 其它有关字符串操作的文档请参阅 [官方文档](http://golang.org/pkg/strings/)（ **译者注：国内用户可访问 [该页面](http://docs.studygolang.com/pkg/strings/)** ）。
+
+字符串拼接场景使用函数推荐：
+* 在已有字符串数组的场合，使用 strings.Join() 能有比较好的性能
+* 在一些性能要求较高的场合，尽量使用 buffer.WriteString() 以获得更好的性能
+* 较少字符串连接的场景下性能最好，而且代码更简短清晰，可读性更好
+* 如果需要拼接的不仅仅是字符串，还有数字之类的其他需求的话，可以考虑 fmt.Sprint
 
 ## 4.7.11 从字符串中读取内容
 
