--- a/eBook/06.3.md
+++ b/eBook/06.3.md
@@ -89,7 +89,7 @@ func F3(s []string) { }
 
 2. 使用空接口：
 
-	如果一个变长参数的类型没有被指定，则可以使用默认的空接口 `interface{}`，这样就可以接受任何类型的参数（详见第 11.9 节）。该方案不仅可以用于长度未知的参数，还可以用于任何不确定类型的参数。一般而言我们会使用一个 for-range 循环以及 switch 结构对每个参数的类型进行判断：
+	如果一个变长参数的类型没有被指定，则可以使用默认的空接口 `interface{}`，这样就可以接受任何类型的参数（详见第 11.9 节）。该方案不仅可以用于长度未知的参数，还可以用于任何不确定类型的参数。**一般而言我们会使用一个 for-range 循环以及 switch 结构对每个参数的类型进行判断**：
 
 	```go
 	func typecheck(..,..,values … interface{}) {
