--- a/eBook/07.1.md
+++ b/eBook/07.1.md
@@ -140,6 +140,8 @@ func main() {
 
 练习7.1：array_value.go: 证明当数组赋值时，发生了数组内存拷贝。
 
+?只发生了值拷贝
+
 练习7.2：for_array.go: 写一个循环并用下标给数组赋值（从 0 到 15）并且将数组打印在屏幕上。
 
 练习7.3：fibonacci_array.go: 在第 6.6 节我们看到了一个递归计算 Fibonacci 数值的方法。但是通过数组我们可以更快的计算出 Fibonacci 数。完成该方法并打印出前 50 个 Fibonacci 数字。
