--- a/eBook/08.3.md
+++ b/eBook/08.3.md
@@ -53,6 +53,8 @@ func main() {
 
 > 译者注：map的本质是散列表，而map的增长扩容会导致重新进行散列，这就可能使map的遍历结果在扩容前后变得不可靠，Go设计者为了让大家不依赖遍历的顺序，每次遍历的起点--即起始bucket的位置不一样，即不让遍历都从bucket0开始，所以即使未扩容时我们遍历出来的map也总是无序的。
 
+> 实际上每次使用`for range`遍历`map`的结果都会不同
+
 问题 8.1： 下面这段代码的输出是什么？
 
 ```go
