--- a/eBook/10.8.md
+++ b/eBook/10.8.md
@@ -24,6 +24,10 @@ runtime.SetFinalizer(obj, func(obj *typeObj))
 
 `func(obj *typeObj)` 需要一个 `typeObj` 类型的指针参数 `obj`，特殊操作会在它上面执行。`func` 也可以是一个匿名函数。
 
+
+> 如果程序正常结束则不会触发`SetFinalizer`，目前看出来是main函数结束后才会释放内存
+
+
 在对象被 GC 进程选中并从内存中移除以前，`SetFinalizer` 都不会执行，即使程序正常结束或者发生错误。
 
 **练习 10.17**
