--- a/eBook/13.7.md
+++ b/eBook/13.7.md
@@ -65,6 +65,9 @@ func BenchmarkReverse(b *testing.B) {
 }
 ```
 
+> benchtest需要以Bench开头，然后以`go test -test.bench=.*`执行
+
+
 命令 ```go test –test.bench=.*``` 会运行所有的基准测试函数；代码中的函数会被调用 N 次（N 是非常大的数，如 N = 1000000），并展示 N 的值和函数执行的平均时间，单位为 ns（纳秒，ns/op）。如果是用 testing.Benchmark 调用这些函数，直接运行程序即可。
 
 具体可以参见 [14.16 节](14.16.md) 中用 goroutines 运行基准测试的例子以及练习 13.4：[string_reverse_test.go](exercises/chapter_13/string_reverse_test.go)
